--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -31,8 +31,8 @@ jobs:
                   ALL_DISCOVERED_PLAYLIST_ID: ${{ secrets.ALL_DISCOVERED_PLAYLIST_ID }}
               run: |
                   python discovered_weekly.py
-            - name: 'Install Snowmate Runner'
-        run: pip install -i "https://${{ secrets.SNOWMATE_CLIENT_ID }}:${{ secrets.SNOWMATE_SECRET_KEY }}@pypi.snowmate.io/simple" -U snowmate_runner
+            #     - name: 'Install Snowmate Runner'
+            # run: pip install -i "https://${{ secrets.SNOWMATE_CLIENT_ID }}:${{ secrets.SNOWMATE_SECRET_KEY }}@pypi.snowmate.io/simple" -U snowmate_runner
             # - name: 'Run Snowmate Tests'
             #     uses: snowmate/snowmate-runner-action@latest
             #     with:
