--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -18,7 +18,7 @@ jobs:
                   python-version: "3.10"
             - name: Install dependencies
               run: |
-                  python -m pip install --upgrade
+                  python -m pip install --upgrade pip
                   pip install -r requirements.txt
             - name: Run discovered weekly
               env:
