--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ python-dotenv==1.0.0
 snowmate_collector==0.0.58
 spotipy==2.18.0
 loguru==0.7.2
+opentelemetry-api==1.20.0
+opentelemetry-sdk==1.20.0
