--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ loguru==0.7.2
 opentelemetry-api==1.20.0
 opentelemetry-sdk==1.20.0
 opentelemetry-exporter-prometheus
+opentelemetry-exporter-prometheus-remote-write
