--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ opentelemetry-api==1.20.0
 opentelemetry-sdk==1.20.0
 opentelemetry-exporter-prometheus
 opentelemetry-exporter-prometheus-remote-write
+deepdiff
