--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -41,8 +41,8 @@ jobs:
               with:
                 project-path: .  # If this repo is not a monorepo, insert "." (dot without the apostrophes).
                 project-id: 650a786ba66c94ade6d4718b  # Insert your project ID
-                client-id: ${{ secrets.SNOWMATE_CLIENT_ID }}
-                secret-key: ${{ secrets.SNOWMATE_SECRET_KEY }}
+                client-id: ${{ secrets.SNOWMATE_CLIENT_ID_J }}
+                secret-key: ${{ secrets.SNOWMATE_SECRET_KEY_J }}
                 github-token: ${{ secrets.GITHUB_TOKEN }}  # Provided by default by GitHub.
 
           
