--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -41,8 +41,8 @@ jobs:
               with:
                 project-path: .  # If this repo is not a monorepo, insert "." (dot without the apostrophes).
                 project-id: 6506ae5ea66c94ade6d47186  # Insert your project ID
-                client-id: ${{ secrets.SNOWMATE_CLIENT_ID_L }}
-                secret-key: ${{ secrets.SNOWMATE_SECRET_KEY_L }}
+                client-id: ${{ secrets.SNOWMATE_CLIENT_ID }}
+                secret-key: ${{ secrets.SNOWMATE_SECRET_KEY }}
                 github-token: ${{ secrets.GITHUB_TOKEN }}  # Provided by default by GitHub.
 
           
