--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -35,7 +35,7 @@ jobs:
                   ALL_DISCOVERED_PLAYLIST_ID: ${{ secrets.ALL_DISCOVERED_PLAYLIST_ID }}
               run: python main.py
             - name: 'Install Snowmate Runner'
-              run: pip install -i "https://${{ secrets.SNOWMATE_CLIENT_ID }}:${{ secrets.SNOWMATE_SECRET_KEY }}@pypi.snowmate.io/simple" -U snowmate_runner
+              run: pip install -i "https://${{ secrets.SNOWMATE_CLIENT_ID_J }}:${{ secrets.SNOWMATE_SECRET_KEY_J }}@pypi.snowmate.io/simple" -U snowmate_runner
             - name: 'Run Snowmate Tests'
               uses: snowmate/snowmate-runner-action@latest
               with:
